--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/dist/styles.css">
     <title>expensetracker</title>
 </head>
 
 <body>
     <div id='app'></div>
-    <script src='/bundle.js'></script>
+    <script src='/dist/bundle.js'></script>
 </body>
 
 </html>
